LayoutTests:

Reviewed and landed by Brady

        Updated test case because of fix for <http://bugs.webkit.org/show_bug.cgi?id=13422>

        Bug 13422: REGRESSION: Page reload loses page position

        * http/tests/navigation/success200-reload-expected.txt:

WebCore:

        Reviewed and landed by Brady

        Fixes <http://bugs.webkit.org/show_bug.cgi?id=13422>

        Bug 13422: REGRESSION: Page reload loses page position

        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::updateHistoryForReload):



Canonical link: https://commits.webkit.org/19498@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@24934 268f45cc-cd09-0410-ab3c-d52691b4dbfc